--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Dash</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="content">
